nullaway_error_9f92ef3d-2233-4835-964c-3f6dde750541.txt
/home/nima/Developer/nullness-benchmarks/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/web/server/Ssl.java:32: error: [NullAway] @NonNull field clientAuth not initialized
	private ClientAuth clientAuth;
	                   ^
    (see http://t.uber.com/nullaway )
